...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                navigation.navigate('PaymentsUICustomScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (deferred intent)"
              onPress={() => {
                navigation.navigate('PaymentSheetDeferredIntentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="More payment scenarios">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Set up future payments"
              onPress={() => {
                navigation.navigate('SetupFuturePaymentScreen');
...
                navigation.navigate('CreateTokenScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="PaymentSheet with PMO SFU"
              onPress={() => {
                navigation.navigate('PaymentSheetWithPmoSfuScreen');
              }}
            />
          </View>
        </>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Buy now pay later">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Afterpay and Clearpay"
              onPress={() => {
                navigation.navigate('AfterpayClearpayPaymentScreen');
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Wallets">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Alipay"
              onPress={() => {
                navigation.navigate('AlipayPaymentScreen');
...
