appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Accept a payment"
- tapOn: "Prebuilt UI (deferred intent)"
- tapOn: "Checkout"
- extendedWaitUntil:
    visible: "TEST"
    timeout: 150000
- tapOn:
    text: "Card"
    optional: true
- tapOn:
    text: "New card"
    optional: true
- tapOn:
    text: "Card number. Supported cards include.*"
- inputText: "4242424242424242"
- tapOn:
    text: "MM / YY"
    optional: true
- inputText: "0145"
- inputText: "123"
- scrollUntilVisible:
    element:
      id: primary_button # Android
    optional: true
- scrollUntilVisible:
    element:
      text: "purchase!" # iOS
    optional: true
- tapOn:
    id: primary_button # Android
    optional: true
- tapOn:
    text: "purchase!" # iOS
    optional: true
- assertVisible:
    text: "Success"
- tapOn: "OK"
